fix(lupin) image too large

--- a/css/styles.css
+++ b/css/styles.css
@@ -210,7 +210,7 @@ footer {
 }
 
 .designer {
-    width: 700px;
+    width: 600px;
     height: auto;
 }
 
